# subscription-backend

./: .dockerignore  .railwayignore  Cargo.toml  Dockerfile  README.md  cleanup_safe.sh  nixpacks.toml  railway.json  railway.toml  test_comprehensive.sh
idl/: subscription_program.json
scripts/: setup-dev-wallet.sh
src/: config.rs  main.rs  main.rs.backup
src/routes/: minimal_blockchain.rs  mod.rs  safe_integration.rs  signals.rs  subscription.rs  wallet_simple.rs
src/signals/: ema.rs  macd.rs  mod.rs  rsi.rs
src/utils/: http_client.rs  mod.rs
