[package]
name = "trading-signals-backend"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Ahmad"]
description = "Trading Signals Backend with Binance API Integration"
license = "MIT"
resolver = "1" 

[dependencies]
# Web Framework
actix-web = "4.4"
actix-cors = "0.7"
actix-rt = "2.9"
base64ct = { version = "1.6.0", force = true }

# Async Runtime
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }

# Configuration
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
env_logger = "0.11"
log = "0.4"

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Cryptography
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Data Structures
lru = "0.11"

# Error Handling
thiserror = "1.0"

# Environment variables
once_cell = "1.18"

# WebSocket
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"

# Solana/Anchor dependencies
solana-client = "1.17"
solana-sdk = "1.17"
solana-program = "1.17"
anchor-client = "0.29"
anchor-lang = { version = "0.29", features = ["derive"] }
anchor-spl = "0.29"
bs58 = "0.5"
uuid = "1.19.0"
lazy_static = "1.5.0"

[dev-dependencies]
actix-http-test = "3.2"
tokio-test = "0.4"
uuid = { version = "1.19", features = ["v4"] }
